MNQ/Longs/oct.txt
  File "Live_Octopus_Triple_Longs_NQ.py", line 480
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
